--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html{
     text-align: center;
+    width: 90%;
     max-width: 1500px;
+    min-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
@@ -35,6 +37,13 @@ html{
     text-anchor: middle;
 }
 
+#typesPieChart{
+    display:grid;
+    grid-template-columns: 65% 35%;
+    grid-template-rows: auto;
+    grid-template-areas: "chart sticker";
+}
+
 .typesBar{
     fill:rgba(255, 255, 255, 0.1);
     stroke: black;
@@ -48,13 +57,21 @@ html{
     font-size: 13px;
 }
 
-#typesPieChart{
-    display: flex;
+
+.typesSticker{
+    padding-top: 60px;
+    grid-area: sticker;
 }
 
-.typesTooltip{
-    display:flex;
-    margin-right: 150px;
-    margin-top: 100px;
-    background-color: rgba(255, 255, 255, 0.74);
+
+
+#poetsChart{
+    display:grid;
+    grid-template-columns: 65% 35%;
+    grid-template-rows: auto;
+    grid-template-areas: "chart intro";
+}
+
+.poetsIntro{
+    grid-area: intro;
 }
