--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ html{
 }
 
 
-
+p{
+    font-size: 15px;
+}
 
 
 
@@ -77,7 +79,7 @@ html{
     grid-area: intro;
     padding-left: 40px;
     padding-right: 40px;
-    padding-top: 180px;
+    padding-top: 150px;
     padding-bottom: auto;
 }
 
