--- a/style.css
+++ b/style.css
@@ -17,6 +17,25 @@ p{
     font-size: 15px;
 }
 
+a{
+    text-decoration: none;
+    color: rgb(174, 51, 51);
+}
+
+button{
+    border: none;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-bottom: 5px;
+    background-color: white;
+}
+
+.active, button:hover{
+    background-color: rgb(72, 72, 72);
+    color: white
+
+}
+
 
 
 .timelineRects{
@@ -65,7 +84,7 @@ p{
 
 
 .typesSticker{
-    padding-top: 60px;
+    padding-top: 40px;
     padding-right: 40px;
     grid-area: sticker;
 }
@@ -80,7 +99,7 @@ p{
 
 .poetsIntro{
     grid-area: intro;
-    padding-left: 40px;
+    padding-left: 60px;
     padding-right: 40px;
     padding-top: 120px;
     padding-bottom: auto;
